--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<meta charset="utf-8">
+	<title>Meine Testseite</title>
 </head>
 <body>
-<h1>hello world! Das macht Spaß!</h1>
+<h1>daniel liebt cori</h1>
+<ul>
+	<li>Schokolade</li>
+	<li>Klopapier</li>
+	<li>Wurst
+		<ul>
+		<li>Salami</li>
+		<li>Schinken</li>
+		<li>Kinderwurst</li>
+		</ul>
+	</li>
+	<li>Wasser</li>
+
+</ul>
 </body>
 </html>
