--- a/site/index.html
+++ b/site/index.html
@@ -2,23 +2,32 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Meine Testseite</title>
+	<title>Blumenhof Keup</title>
 </head>
 <body>
-<h1>daniel liebt cori</h1>
-<ul>
-	<li>Schokolade</li>
-	<li>Klopapier</li>
-	<li>Wurst
-		<ul>
-		<li>Salami</li>
-		<li>Schinken</li>
-		<li>Kinderwurst</li>
-		</ul>
-	</li>
-	<li>Wasser</li>
+<h1>Blumenhof Keup</h1>
+<h2>In Dormagen</h2>
+<SECTION id=hero>
+<img src="Bilder/Hero-Blumenwiese.jpg">
+</SECTION>
 
-</ul>
+<SECTION id=textfeature1>
+	<p>
+	Wegen Renovierungsarbeiten bleibt der Blumenhof von Montag, 1.1.2018 bis Mittwoch, 10.1.2018
+	<br/>
+	GESCHLOSSEN!
+	<br/>
+	Ab Donnerstag, 11.1.2018 sind wir wieder wie gewohnt für Sie da.
+	<br/>
+	Wir wünschen Ihnen und Ihren Familien ein erfolgreiches, gesundes 2018!
+	<div>Ihr Blumenhof Keup-Team</div>
+	</p>
+</SECTION>
+<p>
+<SECTION id=NewsletterLink>
+	<a href="http://eepurl.com/cH-Shn" title="Newsletter Anmeldung">
+		<div>NEU: Melden Sie sich HIER für unseren kostenlosen NEWSLETTER an!</div>
+	</a>
+</SECTION>
 </body>
 </html>
-
