--- a/site/index.html
+++ b/site/index.html
@@ -4,13 +4,40 @@
 	<meta charset="utf-8">
 	<title>Blumenhof Keup</title>
 </head>
-<body>
-<h1>Blumenhof Keup</h1>
-<h2>In Dormagen</h2>
 <SECTION id=hero>
-<img src="Bilder/Hero-Blumenwiese.jpg">
+<img id="Hero" src="Bilder/Rote-Blumen.jpg">
 </SECTION>
+<body>
+<style>
+	h1 {
+		float: center;
+		color:White;
+		font-size: 45px;
+		font-style: normal;
+		margin-left: 60px;
+		margin-top: -340px;
+		font-family: "Volvo Sans Light","Arial Narrow";
+			}
 
+	h2 {
+		float: center;
+		color:red;
+		font-size: 20px;
+		font-style: normal;
+		margin-left: 50px;
+		margin-top: 0px;
+		font-family: "Volvo Sans Light","Arial Narrow";
+	}
+
+	#Hero {
+		float: center;
+		font-style: normal;
+		font-family: "Volvo Sans Light","Arial Narrow";
+	}	
+</style>
+<h1>Blumenhof Keup</h1>
+
+<h2>In Dormagen</h2>
 <SECTION id=textfeature1>
 	<p>
 	Wegen Renovierungsarbeiten bleibt der Blumenhof von Montag, 1.1.2018 bis Mittwoch, 10.1.2018
